--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="shortcut icon" href="./assets/images/Icone.png" type="image/x-icon">
-  <title>Jogo Da Velha - @DeGabrielOFI_</title>
+  <link rel="shortcut icon" href="./assets/images/Icon.png" type="image/x-icon">
+  <link rel="stylesheet" href="sweetalert2.min.css">
+  <title>Jogo Da Velha - DeGabrielDEV</title>
 </head>
 
 <body>
@@ -35,31 +36,35 @@
   </div>
 
   <div class="players">
-
     <div class="player">
 
-      <span class="dog">
-        <img height="80px" src="./assets/images/Logo SPFC.png"">
- </span>
+      <span class="spfc">
+        <img height="80px" src="./assets/images/SPFC.png"">
+      </span>
 
       <div class=" score">
         <h3>Pontos: <span id="p1"></span></h3>
-    </div>
+      </div>
+
   </div>
+
   <div class="player">
-    <span class="cat">
-      <img height="80px" src="./assets/images/Estadio - Morumbi.png" alt="">
+    <span class="morumbis">
+      <img height="80px" src="./assets/images/MorumBIS.png" alt="">
     </span></h2>
     <div class="score">
       <h3>Pontos: <span id="p2"></span></h3>
     </div>
+</div>
+
   </div>
-  </div>
+
   <button class="resetRound mb">Reiniciar Rodada</button>
   <button class="resetGame mb">Reiniciar Jogo</button>
 
   <script src="./assets/scripts/game.js"></script>
   <script src="./assets/scripts/interface.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 </body>
 
